Removed "base" folder in assets/css/styles

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,10 +4,12 @@
 // Import SCSS Files from Admin, Styles and Vendors- along with dependencies.
 // ------------------------------------------------------------
 
+@import 'base/normalize';
 @import 'bourbon/bourbon';
 @import 'base/grid-settings';
 @import 'neat/neat';
 @import 'base/base';
+@import 'base/typography';
 
 @import 'admin/admin';
 @import 'vendors/vendors';
