--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,241 +1,4 @@
 @charset "UTF-8";
-html {
-  box-sizing: border-box;
-}
-
-*, *::after, *::before {
-  box-sizing: inherit;
-}
-
-button, input[type="button"], input[type="reset"], input[type="submit"],
-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -o-appearance: none;
-  appearance: none;
-  -webkit-font-smoothing: antialiased;
-  background-color: #477dca;
-  border-radius: 3px;
-  border: none;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
-  font-weight: 600;
-  line-height: 1;
-  padding: 0.75em 1em;
-  text-decoration: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
-}
-button:hover, button:focus, input[type="button"]:hover, input[type="button"]:focus, input[type="reset"]:hover, input[type="reset"]:focus, input[type="submit"]:hover, input[type="submit"]:focus,
-button:hover,
-button:focus {
-  background-color: #2c5999;
-  color: #fff;
-}
-button:disabled, input[type="button"]:disabled, input[type="reset"]:disabled, input[type="submit"]:disabled,
-button:disabled {
-  cursor: not-allowed;
-  opacity: 0.5;
-}
-
-fieldset {
-  background-color: #f7f7f7;
-  border: 1px solid #ddd;
-  margin: 0 0 0.75em;
-  padding: 1.5em;
-}
-
-input,
-label,
-select {
-  display: block;
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
-}
-
-label {
-  font-weight: 600;
-  margin-bottom: 0.375em;
-}
-label.required::after {
-  content: "*";
-}
-label abbr {
-  display: none;
-}
-
-input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="email"], input[type="month"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="time"], input[type="url"], input[type="week"], textarea,
-select[multiple=multiple],
-textarea {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 3px;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
-  box-sizing: border-box;
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
-  margin-bottom: 0.75em;
-  padding: 0.5em;
-  transition: border-color;
-  width: 100%;
-}
-input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="email"]:hover, input[type="month"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="time"]:hover, input[type="url"]:hover, input[type="week"]:hover, textarea:hover,
-select[multiple=multiple]:hover,
-textarea:hover {
-  border-color: #c4c4c4;
-}
-input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="email"]:focus, input[type="month"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="time"]:focus, input[type="url"]:focus, input[type="week"]:focus, textarea:focus,
-select[multiple=multiple]:focus,
-textarea:focus {
-  border-color: #477dca;
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
-  outline: none;
-}
-
-textarea {
-  resize: vertical;
-}
-
-input[type="search"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -o-appearance: none;
-  appearance: none;
-}
-
-input[type="checkbox"],
-input[type="radio"] {
-  display: inline;
-  margin-right: 0.375em;
-}
-
-input[type="file"] {
-  padding-bottom: 0.75em;
-  width: 100%;
-}
-
-select {
-  margin-bottom: 1.5em;
-  max-width: 100%;
-  width: auto;
-}
-
-ul,
-ol {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-dl {
-  margin-bottom: 0.75em;
-}
-dl dt {
-  font-weight: bold;
-  margin-top: 0.75em;
-}
-dl dd {
-  margin: 0;
-}
-
-table {
-  -webkit-font-feature-settings: "kern", "liga", "tnum";
-  -ms-font-feature-settings: "kern", "liga", "tnum";
-  font-feature-settings: "kern", "liga", "tnum";
-  border-collapse: collapse;
-  margin: 0.75em 0;
-  table-layout: fixed;
-  width: 100%;
-}
-
-th {
-  border-bottom: 1px solid #b7b7b7;
-  font-weight: 600;
-  padding: 0.75em 0;
-  text-align: left;
-}
-
-td {
-  border-bottom: 1px solid #ddd;
-  padding: 0.75em 0;
-}
-
-tr,
-td,
-th {
-  vertical-align: middle;
-}
-
-body {
-  -webkit-font-feature-settings: "kern", "liga", "pnum";
-  -ms-font-feature-settings: "kern", "liga", "pnum";
-  font-feature-settings: "kern", "liga", "pnum";
-  -webkit-font-smoothing: antialiased;
-  color: #333;
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
-  line-height: 1.5;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
-  line-height: 1.2;
-  margin: 0 0 0.75em;
-}
-
-p {
-  margin: 0 0 0.75em;
-}
-
-a {
-  color: #477dca;
-  text-decoration: none;
-  transition: color 0.1s linear;
-}
-a:active, a:focus, a:hover {
-  color: #2c5999;
-}
-a:active, a:focus {
-  outline: none;
-}
-
-hr {
-  border-bottom: 1px solid #ddd;
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  margin: 1.5em 0;
-}
-
-img,
-picture {
-  margin: 0;
-  max-width: 100%;
-}
-
-/**
- * Import your Admin SCSS files. These are styles for the dashboard/admin section of wordpress.
- * ============================================================================================
- */
-.placeholder {
-  content: 'Placehodler for Grunt to compile';
-}
-
-@font-face {}
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
  * 1. Set default font family to sans-serif.
@@ -631,333 +394,293 @@ th {
   padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-dl, dd, ol, ul,
-form, fieldset, legend,
-table, th, td, caption,
-hr {
-  margin: 0;
-  padding: 0;
-}
-
-hr {
-  border-bottom: none;
-}
-
-iframe {
-  border: 0;
-}
-
-fieldset {
-  min-width: 0;
-  border: 0;
-}
-
-[tabindex="-1"]:focus {
-  outline: none !important;
-}
-
 html {
-  font: 0.75em/1.5 "helvetica neue" sans-serif;
-  color: #000000;
-  width: 100%;
-  overflow-y: scroll;
-  min-height: 100%;
-}
-
-body {
-  line-height: 27px;
-  width: 100%;
-  overflow-x: hidden;
-}
-
-.wrapper {
-  position: relative;
-  width: 960px;
-  margin: 0 auto;
-  padding-top: 90px;
-}
-.wrapper:before, .wrapper:after {
-  content: " ";
-  display: table;
-}
-.wrapper:after {
-  clear: both;
-}
-
-*, *:before, *:after {
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6, hgroup,
-ul, ol, dl,
-blockquote, p, address,
-table,
-fieldset, figure,
-pre {
-  margin-bottom: 18px;
-  margin-bottom: 1.5rem;
+*, *::after, *::before {
+  box-sizing: inherit;
 }
 
-.anchor-location {
-  padding-top: 90px;
-  margin-top: -90px !important;
-}
-
-p {
-  font-size: 1.000em;
-  margin-top: 2.25rem;
-  line-height: 1.833rem;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-  text-shadow: none !important;
-}
-a img {
-  cursor: pointer;
-}
-
-h1 {
-  font-weight: bold;
-  font-size: 6.667rem !important;
-  margin-bottom: 1.333rem !important;
-  line-height: .85;
-  position: relative;
-}
-@media (min-width: 992px) and (max-width: 1199px) {
-  h1 {
-    font-size: 6.000rem !important;
-  }
-}
-@media (max-width: 991px) {
-  h1 {
-    font-size: 5.100rem !important;
-  }
-}
-
-h2 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 3.750em;
-  line-height: .85;
-  margin-bottom: .250rem !important;
-}
-@media (min-width: 992px) and (max-width: 1199px) {
-  h2 {
-    font-size: 3.500rem !important;
-  }
-}
-@media (max-width: 991px) {
-  h2 {
-    font-size: 3.000rem !important;
-  }
-}
-
-h3 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 2.417em;
-  line-height: 1;
-  margin-bottom: 12px;
-}
-
-h4 {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 3.167em;
-  line-height: 1;
-  margin-bottom: 20px;
-}
-
-h5,
+button, input[type="button"], input[type="reset"], input[type="submit"],
 button {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 1.667em;
-  line-height: 1;
-}
-
-h6 {
-  font-size: 2.5em;
-  margin-bottom: 10px;
-  font-weight: 300;
-}
-
-q {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 1.125rem;
-  line-height: 1.833rem;
-}
-
-hr {
-  border-top: none;
-  border-bottom: 1px solid #ccc;
-  margin-top: -1px;
-  margin-bottom: 0;
-}
-
-ul {
-  margin: 0;
-  line-height: 1.833rem !important;
-}
-ul li {
-  list-style: none;
-}
-
-.list {
-  line-height: 1.833rem !important;
-}
-.list li {
-  list-style: none;
-  margin-bottom: 8px;
-  background: url("../img/CUSTOM-BULLET") no-repeat 1px 1px transparent;
-  padding: 0 0 15px 25px;
-}
-
-.list--alt li {
-  background: url("../img/CUSTOM-BULLET") no-repeat 1px 1px transparent;
-}
-
-form {
-  border: none;
-  width: 100% !important;
-}
-form label {
-  margin-bottom: 0;
-}
-form input,
-form textarea,
-form select {
-  background: white !important;
-  border: 2px solid #ccc !important;
-  border-radius: 0 !important;
-  box-shadow: none !important;
-  outline: none !important;
-  padding: 10px !important;
-}
-
-.form__item {
-  margin-bottom: 10px;
-}
-
-.form-control {
-  display: block;
-  width: 100%;
-  outline: none;
-  line-height: normal;
-  margin-top: 0;
-  background-color: #ccc;
-  box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.4);
-  padding: 9px 13px 7px 13px;
-  border: 1px solid #c4c4c4;
-}
-
-label,
-legend {
-  display: block;
-  width: 100%;
-}
-
-select {
   -webkit-appearance: none;
   -moz-appearance: none;
   -ms-appearance: none;
   -o-appearance: none;
   appearance: none;
-  text-indent: 0.01px;
-  text-overflow: '';
-}
-
-input[type="file"],
-input[type="range"] {
-  display: block;
-}
-
-input[type="range"] {
-  width: 100%;
-}
-
-input[type="radio"],
-input[type="checkbox"] {
-  margin: 4px 0 0;
-  margin-top: 1px \9;
-  line-height: normal;
-}
-
-.button {
-  display: inline-block;
+  -webkit-font-smoothing: antialiased;
+  background-color: #477dca;
+  border-radius: 3px;
   border: none;
-  margin: 0 0 28px 0;
-  white-space: nowrap;
-  outline: none !important;
-  font-family: inherit;
-  font-weight: bold;
-  line-height: normal;
-  text-decoration: none;
-  text-align: center;
-  text-transform: uppercase;
-  vertical-align: middle;
+  color: #fff;
   cursor: pointer;
+  display: inline-block;
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 1em;
+  font-weight: 600;
+  line-height: 1;
+  padding: 0.75em 1em;
+  text-decoration: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  -o-user-select: none;
   user-select: none;
-  padding: 16px 35px;
-  border-radius: 0;
-  color: #000000;
-  background: #ffca18;
-  /* UI States */
+  vertical-align: middle;
+  white-space: nowrap;
 }
-@media (max-width: 991px) {
-  .button {
-    margin-bottom: 35px !important;
-  }
+button:hover, button:focus, input[type="button"]:hover, input[type="button"]:focus, input[type="reset"]:hover, input[type="reset"]:focus, input[type="submit"]:hover, input[type="submit"]:focus,
+button:hover,
+button:focus {
+  background-color: #2c5999;
+  color: #fff;
 }
-.button:hover, .button:active, .button:focus {
-  text-decoration: none;
+button:disabled, input[type="button"]:disabled, input[type="reset"]:disabled, input[type="submit"]:disabled,
+button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+fieldset {
+  background-color: #f7f7f7;
+  border: 1px solid #ddd;
+  margin: 0 0 0.75em;
+  padding: 1.5em;
+}
+
+input,
+label,
+select {
+  display: block;
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 1em;
+}
+
+label {
+  font-weight: 600;
+  margin-bottom: 0.375em;
+}
+label.required::after {
+  content: "*";
+}
+label abbr {
+  display: none;
+}
+
+input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="email"], input[type="month"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="time"], input[type="url"], input[type="week"], textarea,
+select[multiple=multiple],
+textarea {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
+  box-sizing: border-box;
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 1em;
+  margin-bottom: 0.75em;
+  padding: 0.5em;
+  transition: border-color;
+  width: 100%;
+}
+input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="email"]:hover, input[type="month"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="time"]:hover, input[type="url"]:hover, input[type="week"]:hover, textarea:hover,
+select[multiple=multiple]:hover,
+textarea:hover {
+  border-color: #c4c4c4;
+}
+input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="email"]:focus, input[type="month"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="time"]:focus, input[type="url"]:focus, input[type="week"]:focus, textarea:focus,
+select[multiple=multiple]:focus,
+textarea:focus {
+  border-color: #477dca;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
   outline: none;
-  background: #888b8d;
-  color: black;
 }
-.button:-moz-focus-inner {
-  border: 0;
+
+textarea {
+  resize: vertical;
+}
+
+input[type="search"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+  display: inline;
+  margin-right: 0.375em;
+}
+
+input[type="file"] {
+  padding-bottom: 0.75em;
+  width: 100%;
+}
+
+select {
+  margin-bottom: 1.5em;
+  max-width: 100%;
+  width: auto;
+}
+
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
   padding: 0;
 }
-.button:disabled, .button.disabled {
-  cursor: default;
+dl {
+  margin-bottom: 0.75em;
+}
+dl dt {
+  font-weight: bold;
+  margin-top: 0.75em;
+}
+dl dd {
+  margin: 0;
 }
 
-.button--alt {
-  color: #ffca18;
-  background: #000000;
-  /* UI States */
+table {
+  -webkit-font-feature-settings: "kern", "liga", "tnum";
+  -ms-font-feature-settings: "kern", "liga", "tnum";
+  font-feature-settings: "kern", "liga", "tnum";
+  border-collapse: collapse;
+  margin: 0.75em 0;
+  table-layout: fixed;
+  width: 100%;
 }
-.button--alt:hover, .button--alt:active, .button--alt:focus {
+
+th {
+  border-bottom: 1px solid #b7b7b7;
+  font-weight: 600;
+  padding: 0.75em 0;
+  text-align: left;
+}
+
+td {
+  border-bottom: 1px solid #ddd;
+  padding: 0.75em 0;
+}
+
+tr,
+td,
+th {
+  vertical-align: middle;
+}
+
+body {
+  -webkit-font-feature-settings: "kern", "liga", "pnum";
+  -ms-font-feature-settings: "kern", "liga", "pnum";
+  font-feature-settings: "kern", "liga", "pnum";
+  -webkit-font-smoothing: antialiased;
+  color: #333;
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 1em;
+  line-height: 1.5;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 1em;
+  line-height: 1.2;
+  margin: 0 0 0.75em;
+}
+
+p {
+  margin: 0 0 0.75em;
+}
+
+a {
+  color: #477dca;
   text-decoration: none;
+  transition: color 0.1s linear;
+}
+a:active, a:focus, a:hover {
+  color: #2c5999;
+}
+a:active, a:focus {
   outline: none;
-  background: #888b8d;
-  color: #ffca18;
 }
 
-.button--icon {
-  padding: 20px 20px;
-}
-.button--icon i {
-  font-size: 1.667rem;
-  font-weight: bolder;
-  letter-spacing: 1px;
+hr {
+  border-bottom: 1px solid #ddd;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  margin: 1.5em 0;
 }
 
-.button--centered {
-  display: block;
-  margin: 0 auto;
+img,
+picture {
+  margin: 0;
+  max-width: 100%;
+}
+
+body {
+  -webkit-font-feature-settings: "kern", "liga", "pnum";
+  -ms-font-feature-settings: "kern", "liga", "pnum";
+  font-feature-settings: "kern", "liga", "pnum";
+  -webkit-font-smoothing: antialiased;
+  color: #333;
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 1em;
+  line-height: 1.5;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 1em;
+  line-height: 1.2;
+  margin: 0 0 0.75em;
+}
+
+p {
+  margin: 0 0 0.75em;
+}
+
+a {
+  color: #477dca;
+  text-decoration: none;
+  transition: color 0.1s linear;
+}
+a:active, a:focus, a:hover {
+  color: #2c5999;
+}
+a:active, a:focus {
+  outline: none;
+}
+
+hr {
+  border-bottom: 1px solid #ddd;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  margin: 1.5em 0;
+}
+
+img,
+picture {
+  margin: 0;
+  max-width: 100%;
+}
+
+/**
+ * Import your Admin SCSS files. These are styles for the dashboard/admin section of wordpress.
+ * ============================================================================================
+ */
+.placeholder {
+  content: 'Placehodler for Grunt to compile';
 }
 
 .modal-content {
@@ -970,7 +693,7 @@ input[type="checkbox"] {
 
 blockquote {
   background: transparent;
-  border-left: 10px solid #ffca18;
+  border-left: 10px solid #999;
   padding: 0.5em 10px;
   margin-top: 45px;
   quotes: "“" "”" "‘" "’";
@@ -978,7 +701,7 @@ blockquote {
 }
 
 blockquote:before {
-  color: #282828;
+  color: #333;
   content: open-quote;
   font-size: 4em;
   line-height: 0.1em;
@@ -987,7 +710,7 @@ blockquote:before {
 }
 
 blockquote:after {
-  color: #282828;
+  color: #333;
   content: close-quote;
   font-size: 2em;
   line-height: 0.1em;
@@ -997,6 +720,28 @@ blockquote:after {
 
 blockquote p {
   display: inline;
+}
+
+header {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto;
+  background: orange;
+}
+header::after {
+  clear: both;
+  content: "";
+  display: table;
+}
+header nav {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 74.41059%;
+  background: blue;
+}
+header nav:last-child {
+  margin-right: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
