Add custom typography

--- a/assets/css/styles/patterns/_modals.scss
+++ b/assets/css/styles/patterns/_modals.scss
@@ -1,7 +1,7 @@
 // ------------------------------------------------------------
 // Modals
 //
-// Style overrides for Bootstrap Modals
+// 
 // ------------------------------------------------------------
 
 .modal-content{
