--- a/assets/css/styles/styles.scss
+++ b/assets/css/styles/styles.scss
@@ -18,6 +18,7 @@
 @import "patterns/modals";
 @import "patterns/blockquotes";
 @import "patterns/tooltips";
+@import "patterns/typography";
 
 //
 // Layouts
