Updated Grunt, and file structure

--- a/assets/css/bootstrap/_variables.scss
+++ b/assets/css/bootstrap/_variables.scss
@@ -864,3 +864,16 @@ $page-header-border-color:    $gray-lighter !default;
 $dl-horizontal-offset:        $component-offset-horizontal !default;
 //** Horizontal line color.
 $hr-border:                   $gray-lighter !default;
+
+
+
+
+
+//## WHOA WHOA WHOA!!!!!!!
+//## THIS IS IMPORTANT!!!!
+
+// Import custom-variables so that our custom elements are included globally.
+@import '../styles/custom-globals/custom-variables';
+
+//## THIS IS IMPORTANT!!!!
+//## WHOA WHOA WHOA!!!!!!!
