--- a/assets/css/styles/custom-globals/_typography.scss
+++ b/assets/css/styles/custom-globals/_typography.scss
@@ -1,5 +1,6 @@
-// --------------------------------------------------
-//
+// -----------------------------------------------------------------
 // Custom Typography
 //
-// --------------------------------------------------
+// Custom typography for use in this project only.
+// 
+// -----------------------------------------------------------------
