--- a/assets/css/styles/styles.scss
+++ b/assets/css/styles/styles.scss
@@ -26,6 +26,13 @@
 @import "patterns/tooltips";
 
 //
+// Patterns
+// --------------------------------------------------
+@import "patterns/modals";
+@import "patterns/blockquotes";
+@import "patterns/tooltips";
+
+//
 // Layouts
 // --------------------------------------------------
 @import "layout/header";
