--- a/assets/css/bootstrap.scss
+++ b/assets/css/bootstrap.scss
@@ -4,7 +4,7 @@
 
 // Reset and dependencies
 @import "bootstrap/normalize";
-// @import "bootstrap/print";
+//@import "bootstrap/print";
 @import "bootstrap/glyphicons";
 
 // Core CSS
@@ -21,7 +21,7 @@
 @import "bootstrap/dropdowns";
 // @import "bootstrap/button-groups";
 @import "bootstrap/input-groups";
-@import "bootstrap/navs";
+// @import "bootstrap/navs";
 @import "bootstrap/navbar";
 // @import "bootstrap/breadcrumbs";
 // @import "bootstrap/pagination";
