--- a/assets/css/bootstrap/_scaffolding.scss
+++ b/assets/css/bootstrap/_scaffolding.scss
@@ -22,6 +22,7 @@
 html {
   font-size: 10px;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  height: 100%;
 }
 
 body {
@@ -30,6 +31,7 @@ body {
   line-height: $line-height-base;
   color: $text-color;
   background-color: $body-bg;
+  height: 100%;
 }
 
 // Reset fonts for relevant elements
