--- a/assets/css/styles/custom-globals/_scaffolding.scss
+++ b/assets/css/styles/custom-globals/_scaffolding.scss
@@ -1,4 +1,6 @@
 
-body{
-	padding-top: 40px;
+// Content-block is a class you can add to..you guessed it... a content block. 
+// Gives general padding, etc. to keep things neat.
+.content-block{
+	padding: 50px 0;
 }
