Un-commented variables so grunt will run with no problems

--- a/assets/css/styles/custom-globals/_custom-variables.scss
+++ b/assets/css/styles/custom-globals/_custom-variables.scss
@@ -55,7 +55,7 @@ $link-color:			$white;
 //## Button Variables
 $button-border-color:	$white;
 $button-bg-color:		transparent;
-// $button-font:			'futura-pt';
+$button-font:			'futura-pt';
 $button-type-color:		$white;
 $button-hover-type:		$green;
 
@@ -63,5 +63,5 @@ $button-hover-type:		$green;
 //== Typography
 //
 //## Typography Variables
-// $heading-font:			'futura-pt';
-// $body-font:				'ff-tisa-web-pro'
+$heading-font:			'futura-pt';
+$body-font:				'ff-tisa-web-pro'
