--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,8 @@
 // Import SCSS Files from Admin, Styles and Vendors- along with dependencies.
 // ------------------------------------------------------------
 
+@import 'bootstrap/variables';
+@import 'bootstrap/mixins';
 @import 'admin/admin';
 @import 'vendors/vendors';
 @import 'styles/styles';
