updated starter kit

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: sq1-wordpress-starter
+Theme Name: the-ground-up
 Theme URI: https://github.com/
 Description: a wordpress starter kit with powerful capabilities
 Version: 1.0
