--- a/assets/css/styles/custom-globals/_typography.scss
+++ b/assets/css/styles/custom-globals/_typography.scss
@@ -10,7 +10,7 @@
 //## Styling for headings and body copy
 
 //Base Font Size
-body{
+html{
 	font-size: 14px;
 	transition: all .33s ease-in-out;
 	@media(min-width: $screen-sm-min) and (max-width: $screen-sm-max){
